fixed layout issues

--- a/src/app/config/config.component.less
+++ b/src/app/config/config.component.less
@@ -1,15 +1,13 @@
 .linear-bg {
   border-bottom: 1px solid #000;
-  margin-bottom: 1px;
-  margin-right: -15px;
-  margin-left: -15px;
   background: linear-gradient(to bottom, #fff, rgba(51, 51, 51, 0.1));
   height: 170px;
   padding: 0;
+  z-index: 1;
+  width: 100%;  
   position: fixed;
-  z-index: 3;
-  width: 100%;
-  background-color: white !important;
+  top: 57px;
+  background-color: #fff;
 } 
 .inner-router {
   margin-top: 175px;
