--- a/src/app/nav/nav.component.less
+++ b/src/app/nav/nav.component.less
@@ -1,11 +1,9 @@
 .nav-component {
   position: fixed;
-  left: 0;
-  top: 56px;
-  z-index: 5;
+  z-index: 2;
   nav {
-    background-color: #222222 !important;
-    height: 650px;
+    background-color: #333 !important;
+    height: 100vh;
     overflow-y: scroll;
     ul {
       padding: 0;
